--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
+    "react-router": "^7.4.1",
     "sass": "^1.86.1"
   },
   "devDependencies": {
